--- a/experiment error.html
+++ b/experiment error.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>4Geeks Academy</title>
-	</head>
-	<body>
-		<!-- your code here -->
-		<table width="100%" border="1">
-<thead>
-	<tr height="40" style="background-color:#FF0000">
-	<th>Name</th>
-	<th>Last Name</th>
-	<th>Phone Number</th>
-	</tr>
-</thead>
-<tbody>
-<tr>
-	<td>Justin</td>
-	<td>Priveto</td>
-	<td>3467375829</td>
-</tr>
-<tr>
-	<td>Jacob</td>
-	<td>Prieto</td>
-	<td>3452342323</td>
-</tr>
-<tr>
-	<td>James</td>
-	<td>Mc Dunzk</td>
-	<td>2344553434</td>
-</tr>
-</tbody>
-		</table>	
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Instagram Style Layout</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="maincss.css">
+</head>
+<body>
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                <div class="profile-info">
+                    <img src="https://imgv3.fotor.com/images/cover-photo-image/ai-generate-dragon-from-text-in-Fotor-AI-image-generator.jpg" alt="HTML5 Logo" class="profile-pic">
+                    <div class="profile-name">
+                        <strong>HTML5</strong><br>
+                        Rigoberto
+                    </div>
+                </div>
+                <div class="menu-icon">⋮</div>
+            </div>
+            <div class="card-image" style="background-image: url('https://media.es.wired.com/photos/6501e7429fa9000811a95fe8/16:9/w_2560%2Cc_limit/Adobe%2520Firefly.jpeg');"></div>
+            <div class="card-actions">
+                <span class="icon"><i class="far fa-heart"></i></span>
+                <span class="icon"><i class="far fa-comment"></i></span>
+                <span class="icon"><i class="far fa-paper-plane"></i></span>
+                <span class="icon bookmark"><i class="far fa-bookmark"></i></span>
+            </div>
+            <div class="card-content">
+                <p>Liked by <strong>4GeeksAcademy, html5, Web</strong> and <strong>100,000 others</strong></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
