--- a/Instagramfeeddos.html
+++ b/Instagramfeeddos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Style Layout</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="maincss.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
